syntax = "proto3";

package messages;

message SubmitLanguage {
    string compiler = 1;
    string lang = 2;
    string option_value = 3;
}

message TestCase {
    int64 case_id = 1;
    bytes input_hash = 2;
    bytes output_hash = 3;
    bytes input = 4;
    bytes output = 5;
}

message SpjCode {
    int64 local_pid = 1;
    bytes hash = 2;
    string code = 3;
}

message SubmitMQ {
    int64 run_id = 1;
    string oj_name = 2;
    string oj_pid = 3;
    string code = 4;
    bool is_local = 5;
    bool is_spj = 6;
    SubmitLanguage language = 8;
    repeated TestCase testcases = 9;
}
